# scientific-pdf-splitter

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/input/: articles_metadata.json
data/sample/output/: articles.csv  articles.json  checksums.sha256  export_manifest.json  issue_processing_report.json
docs/: architecture.md  architecture_overview.md  roadmap.md
examples/: quickstart.py
src/pdf_splitter/: __init__.py  models.py  output.py  validator.py  workflow.py
tests/: test_models.py  test_output.py  test_validator.py  test_workflow.py
tools/: generate_sample.py
